# starknet-signing-cpp

./: .gitmodules  CMakeLists.txt  README.md  build.sh
libs/: CMakeLists.txt
libs/starknet-crypto-ffi/src/cpp-wrapper/src/: CMakeLists.txt
libs/starknet-crypto-ffi/src/cpp-wrapper/tests/: CMakeLists.txt
libs/starknet-crypto-ffi/src/rust-api/: CMakeLists.txt  Cargo.toml
overwrite_crypto_cpp/: CMakeLists.txt  CMakeLists_algebra.txt  CMakeLists_crypto.txt  CMakeLists_starkex.txt  CMakeLists_starkware.txt
src/: Account.cpp  Account.hpp  CMakeLists.txt  Message.cpp  Message.hpp  Order.cpp  Order.hpp  RustBinding.cc  RustBinding.h
tests/: CMakeLists.txt
